@@ -1,3 +1,11 @@
+2001-08-05  John Kirkland  <jpk@bl.org>  (1.2-cvs-b4)
+	* Nested albums now inherit the album settings from their parents
+	  when they are created.  
+
+	* Modified the "return-to" behavior when nested albums are used.
+	  Now, if return is turned off, then nested albums will only show
+	  a return link to their parent album, but not the main gallery.
+
 2001-08-04  Bharat Mediratta  <bharat@menalto.com>  (1.2-cvs-b3)
 
 	* Added a hack that allows you to do multi-level album highlighting.
